# PhysicsSim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.cpp  run_sim.sh
.devcontainer/: Dockerfile
include/: Body.h  Camera.h  Renderer.h  Simulation.h
src/: Body.cpp  Renderer.cpp  Simulation.cpp  main.cpp
tests/: openGL_test  openGL_test.cpp
